add submit button and document.ready function

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
           <label for="item3"></label>
           <input type="text" id="item3" name="item3" class="form-contol" placeholder="Enter here">
         </div>
+        <div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
       </form>
+      <div id="list"></div>
     </div>
   </body>
 </html>
